# bootcamp_2025_python

./: .gitignore  README.md  pyproject.toml
Class_Documents/: Class_1.md
_init-scripts/: 01-create-postgres-user.sql
_tests/: test_exercices_1.py  test_exercises_2.py  test_exercises_3.py  test_exercises_4.py
_utilities/: __init__.py
data_analysis/: pyproject.toml
exercises/: exercises_1.py  exercises_2.py  exercises_3.py  exercises_4.py
src/: analysis.py
